--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -4,7 +4,7 @@
     <title>Página de Teste</title>
 </head>
 <body>
-    <h1>Olá, Mundo!</h1>
-    <p>Este é um exemplo de página HTML.</p>
+    <h1>Teste!</h1>
+    <p>Teste  HTML.</p>
 </body>
 </html>
