--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
         <h1>Bem-vindo ao Seu Diário Criativo</h1>
         <div class="diario">
             <div id="entrada-usuario">
-                <h2>Escreva suas ideias criativas aqui:</h2>
+                <h2>Escreva aqui</h2>
                 <textarea id="texto-entrada" rows="5" cols="40"></textarea>
                 <button id="enviar">Enviar</button>
             </div>
